2003-04-01  Kim F. Storm  <storm@cua.dk>

	* Makefile.in (frame.o): Add dependency on blockinput.h and files
	included from it (atimer.h and systime.h).

2003-03-31  Juanma Barranquero  <lektu@terra.es>

	* makefile.w32-in ($(BLD)/frame.$(O)): Add dependency on
	blockinput.h and files included from it.

2003-03-31  Kim F. Storm  <storm@cua.dk>

	The following changes consolidates the common code related to
	frame-parameter handling from the xfns.c, w32fns.c, and macfns.c
	files into frame.c.

	* frame.c: Include blockinput.h.
	(Vx_resource_name, Vx_resource_class, Qx_frame_parameter)
	(Qx_resource_name, Qface_set_after_frame_default): Define vars here.
	(Qauto_raise, Qauto_lower, ...): Define all frame parameter
	related vars here.
	(struct frame_parm_table, frame_parms): New table for describing
	frame parameters and their associated Q-variable.
	The order of the parameters corresponds to the sequence of the
	frame_parm_handlers table in redisplay_interface.
	(x_fullscreen_move, x_set_frame_parameters)
	(x_report_frame_params, x_set_fullscreen, x_set_line_spacing)
	(x_set_screen_gamma, x_set_font, x_set_fringe_width)
	(x_set_border_width, x_set_internal_border_width, x_set_visibility)
	(x_set_autoraise, x_set_autolower, x_set_unsplittable)
	(x_set_vertical_scroll_bars, x_set_scroll_bar_width, x_icon_type):
	Generic functions for processing of frame parameters.
	(validate_x_resource_name, xrdb_get_resource, Fx_get_resource)
	(display_x_get_resource, x_get_resource_string): Functions for
	generic access to X resources.
	(x_get_arg, x_frame_get_arg, x_frame_get_and_record_arg)
	(x_default_parameter, Fx_parse_geometry): Functions for generic
	access to frame parameters.
	(x_figure_window_size): Generic calculation of frame size. Fixed
	to add space needed for tool bar.  Also setup size_hint_flags.
	(syms_of_frame): Intern and staticpro frame parameter variables.
	Defvar_lisp Vx_resource_class and Vx_resource_name here.
	Defsubr Sx_get_resource and Sx_parse_geometry.
